// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tradernet/Dropdown DM_Binding smoke-test 1`] = `
<div class="m_0 mantine-Group-root"
     style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
>
  <div class
       style="width: calc(5rem * var(--mantine-scale));"
  >
    <div class="c_0 c_1 m_1 mantine-InputWrapper-root mantine-InputBase-root"
         data-variant="default"
         data-size="sm"
    >
      <div class="m_2 mantine-Input-wrapper mantine-InputBase-wrapper"
           data-variant="default"
           data-size="sm"
           data-pointer="true"
           data-with-right-section="true"
           style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm); --input-right-section-pointer-events: none;"
      >
        <button class="c_2 c_1 c_3 c_4 c_3 m_3 mantine-Input-input mantine-InputBase-input"
                data-variant="default"
                type="button"
                aria-haspopup="listbox"
                autocomplete="off"
                aria-invalid="false"
                id="mantine-0"
        >
          And
        </button>
        <div data-position="right"
             class="c_5 m_4 mantine-Input-section mantine-InputBase-section"
        >
          <svg aria-hidden="true"
               focusable="false"
               data-prefix="fasr"
               data-icon="angle-down"
               class="svg-inline--fa fa-angle-down "
               role="img"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 448 512"
               data-testid="icon-angle-down"
          >
            <path fill="currentColor"
                  d="M224 385.9l17-17L401 209l17-17L384 158.1l-17 17-143 143L81 175l-17-17L30.1 192l17 17L207 369l17 17z"
            >
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <button class="mantine-focus-auto mantine-active c_6 c_1 c_7 c_8 c_9 m_5 mantine-Button-root m_6 mantine-UnstyledButton-root"
          data-variant="outline"
          data-size="sm"
          data-with-left-section="true"
          type="button"
          style="--button-height: var(--button-height-sm); --button-padding-x: var(--button-padding-x-sm); --button-fz: var(--mantine-font-size-sm); --button-bg: transparent; --button-hover: var(--mantine-color-secondary-outline-hover); --button-color: var(--mantine-color-secondary-outline); --button-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-secondary-outline);"
  >
    <span class="m_7 mantine-Button-inner">
      <span class="c_10 m_8 mantine-Button-section"
            data-position="left"
      >
        <svg aria-hidden="true"
             focusable="false"
             data-prefix="fasr"
             data-icon="plus"
             class="svg-inline--fa fa-plus "
             role="img"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 448 512"
             data-testid="icon-plus"
        >
          <path fill="currentColor"
                d="M248 72l0-24-48 0 0 24 0 160L40 232l-24 0 0 48 24 0 160 0 0 160 0 24 48 0 0-24 0-160 160 0 24 0 0-48-24 0-160 0 0-160z"
          >
          </path>
        </svg>
      </span>
      <span class="c_11 m_9 mantine-Button-label">
        Add key
      </span>
    </span>
  </button>
  <button class="mantine-focus-auto mantine-active c_6 c_1 c_7 c_8 c_9 m_5 mantine-Button-root m_6 mantine-UnstyledButton-root"
          data-variant="outline"
          data-size="sm"
          data-with-left-section="true"
          type="button"
          style="--button-height: var(--button-height-sm); --button-padding-x: var(--button-padding-x-sm); --button-fz: var(--mantine-font-size-sm); --button-bg: transparent; --button-hover: var(--mantine-color-secondary-outline-hover); --button-color: var(--mantine-color-secondary-outline); --button-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-secondary-outline);"
  >
    <span class="m_7 mantine-Button-inner">
      <span class="c_10 m_8 mantine-Button-section"
            data-position="left"
      >
        <svg aria-hidden="true"
             focusable="false"
             data-prefix="fasr"
             data-icon="object-group"
             class="svg-inline--fa fa-object-group "
             role="img"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 576 512"
             data-testid="icon-object-group"
        >
          <path fill="currentColor"
                d="M32 128l16 0 0 256-16 0 0 64 0 32 32 0 64 0 0-16 320 0 0 16 64 0 32 0 0-32 0-64-16 0 0-256 16 0 0-64 0-32-32 0-64 0 0 16L128 48l0-16L64 32 32 32l0 32 0 64zM96 416L96 96l384 0 0 320L96 416zm32-288l0 160 192 0 0-160-192 0zM256 320l0 64 192 0 0-160-96 0 0 64 0 32-32 0-64 0z"
          >
          </path>
        </svg>
      </span>
      <span class="c_11 m_9 mantine-Button-label">
        Add group
      </span>
    </span>
  </button>
</div>
`;

exports[`Tradernet/Dropdown Default smoke-test 1`] = `
<div class>
  <div class="c_0 c_1 m_0 mantine-InputWrapper-root mantine-InputBase-root"
       data-variant="default"
       data-size="sm"
  >
    <div class="m_1 mantine-Input-wrapper mantine-InputBase-wrapper"
         data-variant="default"
         data-size="sm"
         data-pointer="true"
         data-with-right-section="true"
         style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm); --input-right-section-pointer-events: none;"
    >
      <button class="c_2 c_1 c_3 c_4 c_3 m_2 mantine-Input-input mantine-InputBase-input"
              data-variant="default"
              type="button"
              aria-haspopup="listbox"
              autocomplete="off"
              aria-invalid="false"
              id="mantine-0"
      >
        Page 1
      </button>
      <div data-position="right"
           class="c_5 m_3 mantine-Input-section mantine-InputBase-section"
      >
        <svg aria-hidden="true"
             focusable="false"
             data-prefix="fasr"
             data-icon="angle-down"
             class="svg-inline--fa fa-angle-down "
             role="img"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 448 512"
             data-testid="icon-angle-down"
        >
          <path fill="currentColor"
                d="M224 385.9l17-17L401 209l17-17L384 158.1l-17 17-143 143L81 175l-17-17L30.1 192l17 17L207 369l17 17z"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
